chore: update the bash path

--- a/.github/workflows/gh-pages.deploy.yml
+++ b/.github/workflows/gh-pages.deploy.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      NEXT_PUBLIC_BASE_PATH: /auto-githubpages
+      NEXT_PUBLIC_BASE_PATH: /GotaBit-website
 
     strategy:
       matrix:
