--- a/.github/workflows/gh-pages.deploy.yml
+++ b/.github/workflows/gh-pages.deploy.yml
@@ -23,9 +23,9 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install packages
-        run: npm install
+        run: yarn
       - name: Build project
-        run: npm run build
+        run: yarn build
       - name: Export static files
         run: npm run export
       - name: Add .nojekyll file
